welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:6: error: ')' expected but 'return' found.
     return a+b
     ^